package OldCode;

public class BasicIceCream {

    public String getDescription() {
        return "Creating a single scoop Ice-Cream in a bowl";
    }

    public double getCost() {
        return 0.5;
    }
}