package OldCode;

public class MintIceCream extends BasicIceCream{

    public String getDescription() {
        return "Single scoop of Mint Ice-Cream";
    }

    public double getCost() {
        return 1.5;
    }
}
